config/kubernetes/deploy-graphql-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  name: ${APP}-${PREFIX}-grapqhl-backend-deployment
  annotations:
    kubernetes.io/change-cause: ${CHANGE_CAUSE}
  labels:
    app: ${APP}-${PREFIX}-grapqhl-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP}-${PREFIX}-grapqhl-backend-deployment
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: ${APP}-${PREFIX}-grapqhl-backend-deployment
      annotations:
        kubernetes.io/change-cause: ${CHANGE_CAUSE}
    spec:
      containers:
        - name: ${APP}-${PREFIX}-graphql-gateway-container
          image: ${GRAPHQL_GATEWAY_IMAGE}
          ports:
            - containerPort: ${GRAPHQL_GATEWAY_PORT}
          resources:
            limits:
              cpu: 102m
            requests:
              cpu: 102m
        - name: ${APP}-${PREFIX}-graphql-server-container
          image: ${GRAPHQL_SERVER_IMAGE}
          ports:
            - containerPort: ${GRAPHQL_SERVER_PORT}
          resources:
            limits:
              cpu: 102m
            requests:
              cpu: 102m
---
apiVersion: v1
kind: Service
metadata:
  name: ${APP}-${NAMESPACE}-graphql-server-service
spec:
  selector:
    app: ${APP}-deployment
  ports:
    - name: ${APP}-${PREFIX}-graphql-server-container
      protocol: TCP
      port: ${GRAPHQL_SERVER_PORT}
      targetPort: ${GRAPHQL_SERVER_PORT}
