config/kubernetes/deploy-load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: ${APP}-load-balancer-service
  annotations:
    kubernetes.io/change-cause: ${CHANGE_CAUSE}
    service.beta.kubernetes.io/do-loadbalancer-name: '${APP}-load-balancer'
    service.beta.kubernetes.io/do-loadbalancer-certificate-id: '${CERTIFICATE_ID}'
    service.beta.kubernetes.io/do-loadbalancer-protocol: 'https'
    service.beta.kubernetes.io/do-loadbalancer-size-unit: '1'
    service.beta.kubernetes.io/do-loadbalancer-disable-lets-encrypt-dns-records: 'true'
    service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: 'true'
  labels:
    app: ${APP}-load-balancer-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: ${GRAPHQL_GATEWAY_PORT}
      
    - name: https
      protocol: TCP
      port: 443
      targetPort: ${GRAPHQL_GATEWAY_PORT}
  selector:
    app: ${APP}-load-balancer-service
