config/kubernetes/deploy-ingress.commit.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP}-commit-virtual-host-ingress
  namespace: commit
  annotations:
    kubernetes.io/change-cause: ${CHANGE_CAUSE}
spec:
  rules:
  - host: "${COMMIT_TAG}.commit.truffle.tools"
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: ${APP}-${PREFIX}-graphql-backend-port
            port:
              number: 3001
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ${APP}-${PREFIX}-ui-port
            port:
              number: 3001
