config/kubernetes/deploy-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP}-production-virtual-host-ingress
  namespace: production
spec:
  rules:
  - host: "truffle.tools"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ${APP}-production-graphql-backend-port
            port:
              number: 3001
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ${APP}-production-ui-port
            port:
              number: 3001
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP}-staging-virtual-host-ingress
  namespace: staging
spec:
  rules:
  - host: "staging.truffle.tools"
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: ${APP}-staging-graphql-backend-port
            port:
              number: 3001
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ${APP}-staging-ui-port
            port:
              number: 3001
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP}-commit-virtual-host-ingress
  namespace: commit
  annotations:
    kubernetes.io/change-cause: ${CHANGE_CAUSE}
spec:
  rules:
  - host: "${COMMIT_TAG}.commit.truffle.tools"
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: ${APP}-${PREFIX}-graphql-backend-service
            port:
              number: 3001
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ${APP}-${PREFIX}-ui-service
            port:
              number: 3001
